greeting-app/yaml-files/deploy.yml
---
# Source: greeting/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-greeting
  labels:
    helm.sh/chart: greeting-0.1.0
    app.kubernetes.io/name: greeting
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: greeting
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        helm.sh/chart: greeting-0.1.0
        app.kubernetes.io/name: greeting
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      serviceAccountName: default
      containers:
        - name: greeting
          image: "lmonzalvo/weather_app:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8010
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
