greeting-app/yaml-files/out.yml
---
# Source: greeting-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeting-app-service
  labels:
    app: greeting-app
spec:
  type: NodePort
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 8010
      nodePort: 30010
      name: http
  selector:
    app: greeting-app
---
# Source: greeting-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeting-app
  labels:
    app: greeting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeting-app
  template:
    metadata:
      labels:
        app: greeting-app
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: greeting-app-container
          image: "lmonzalvo/greeting_app:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8010
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
---
# Source: greeting-app/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: greeting-app-test-connection
  labels:
    app: greeting-app
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['greeting-app:5000']
  restartPolicy: Never
