greeting-app/yaml-files/service.yml
---
# Source: greeting/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-greeting
  labels:
    helm.sh/chart: greeting-0.1.0
    app.kubernetes.io/name: greeting
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: greeting
    app.kubernetes.io/instance: release-name
